Repair z-index on flash message

--- a/app/css/settings/_flash.sass
+++ b/app/css/settings/_flash.sass
@@ -5,11 +5,12 @@
   +animation(fadeOut 0.5s 1)
   +animation-fill-mode(forwards)
   +animation-delay(3s)
+  z-index: 100
   p
     display: inline-block
     padding: 5px 10px
     border-radius: 3px
-    background: rgba(255,255,255,0.8)
+    background: silver
     color: black
     font-size: 14px
     &.error
